nscmr/static/sass/style.scss
$dark: #222;
$grey : #9d9d9d;
$dark-grey : #2b2b2b;
$light: #fff;

@mixin align-vertical($height) {
  height: $height;
  line-height: $height;
  vertical-align: middle;
}

.light {
  background: $light;
  color: $dark;
  li.active,
  li:hover {
    background: $dark;
    color: $light;
  }
}

.dark {
  background: $dark;
  color: $light;
  li.active,
  li:hover {
    background: $light;
    color: $dark;
  }
}

/*
 * general settings
 */

body, html {
  height: 100%;
  width: 100%;
  font: 100%;
  display: block;
}

a:not(.link),
a:link:not(.link),
a:hover:not(.link),
a:visited:not(.link),
a:active:not(.link),
a:focus:not(.link) {
  text-decoration: none;
  color: inherit;
}

.text-right {
  align-text: right;
  padding-right: 0;
}

.hidden {
  display: none;
}

/*
 * navbar
 */

#navbar-wrapper {
  margin-bottom: 0;
  color: $grey;
}

nav > .row,
.navbar-right {
  margin-right: 0px;
}

.logo {
  width: 100%;
  text-align: center;
}

#bag-btn,
#like-btn {
  @include align-vertical(50px);
  font-size: 1.5em;
  padding-right: 10px;
  &:hover { color: $light; }
}

/*
 * sidebar
 */

#buy-menu,
#sidebar {
  position: fixed;
  padding-top: 51px;
  width: 250px;
  height: 100%;
  left: -250px;
  top: 0;
  bottom: 0;
  transform: translate(0,0);
  transition: transform 500ms;
  ul {
    padding: 0;
    width: 100%;
    text-align: center;
    li {
      list-style: none;
      @include align-vertical(40px);
      & > a { display: block; width: 100%; }
    }
  }
}

#sidebar {
  @extend .dark;
  z-index: 1000;
  &.open {
    transform: translate(250px, 0);
  }
}

#buy-menu {
  @extend .light;
  z-index: 900;
  &.open {
    transform: translate(500px, 0);
  }
}

#sidebar-btn {
  margin: 10px 0 10px 5px;
  width: 30px;
  @include align-vertical(30px);
  background: $dark;
  text-align: center;
  i {
    padding: 5px;
    font-size: 1.5em;
  }
  &:hover { color: $light; }
}

.fixed { position: fixed; }

/*
 * headers
*/

#carousel-wrapper {
  position: relative;
}

#header, #myCarousel, .item, .carousel-inner, .header-img {
  width:100%;
}

[id*=carousel-item-] {
  width:100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100% 100%;
}

#carousel-item-1,
#carousel-item-2,
#carousel-item-3
{
  @media screen and (min-width: 320px) {
    height: 400px;
    background-image:url("http://placehold.it/320x400");
  }
  @media screen and (min-width: 480px) {
    height: 500px;
    background-image:url("http://placehold.it/480x500");
  }
  @media screen and (min-width: 720px) {
    height: 600px;
    background-image:url("http://placehold.it/720x600");
  }
  @media screen and (min-width: 768px) {
    height: 700px;
    background-image:url("http://placehold.it/768x700");
  }
  @media screen and (min-width: 920px) {
    height: 700px;
    background-image:url("http://placehold.it/920x700");
  }
  @media screen and (min-width: 992px) {
    height: 700px;
    background-image:url("http://placehold.it/990x700");
  }
  @media screen and (min-width: 1200px) {
    height: 750px;
    background-image:url("http://placehold.it/1200x800");
  }
  @media screen and (min-width: 1440px) {
    height: 800px;
    background-image:url("http://placehold.it/1440x850");
  }
  @media screen and (min-width: 1600px) {
    height: 800px;
    background-image:url("http://placehold.it/1600x900");
  }
}

#carousel-box {
  position: absolute;
  border: 2px solid $dark;
  text-align: center;
  span {
    position: relative;
    top: 30px;
  }
  @media screen and (min-width: 320px) {
    font-size: 0.8em;
    height: 140px;
    width: 120px;
    padding: 15px 5px 5px 5px;
    top: 55%;
    left: 55%;
  }
  @media screen and (min-width: 480px) {
    top: 60%;
    left: 65%;
  }
  @media screen and (min-width: 720px) {
    top: 55%;
    left: 70%;
    font-size: 1em;
    width: 165px;
    height: 185px;
    padding: 30px 10px 10px 10px;
  }
  @media screen and (min-width: 920px) {
    left: 75%;
  }
  @media screen and (min-width: 1200px) {
    left: 80%;
  }
  @media screen and (min-width: 1440px) {
    left: 82%;
    top: 60%;
  }
  @media screen and (min-width: 1600px) {
    left: 85%;
    top: 60%;
  }
}

/*
 * index stuff
 */

#index-content-wrapper {
  width: 100%;
  font-color: $dark;
}

.category-panel {
  text-align: center;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100% 100%;
  width: 100%;
  @media screen and (min-width: 320px) {
    height: 250px;
  }
  @media screen and (min-width: 480px) {
    height: 410px;
  }
  @media screen and (min-width: 720px) {
    height: 650px;
  }
  @media screen and (min-width: 768px) {
    height: 364px;
  }
  @media screen and (min-width: 920px) {
    height: 390px;
  }
  @media screen and (min-width: 992px) {
    height: 285px;
  }
  @media screen and (min-width: 1200px) {
    height: 360px;
  }
  @media screen and (min-width: 1440px) {
    height: 435px;
  }
  @media screen and (min-width: 1600px) {
    height: 500px;
  }
}

.name-box {
  display: inline-block;
  border: 2.8px solid $dark;
  width: 40%;
  @include align-vertical(30px);
  text-align: center;
  position: absolute;
  top: 85%;
  left: 30%;
  margin: 0;
  padding: 0;

}

#page-content {
  padding: 20px;
  margin-bottom: 50px;
  [class*="col-"] {
    padding: 2.5px !important;
  }
}


/*
 * login form stuff (base.html)
 */

#login-dropdown-form {
  padding: 5px 30px 15px 30px;
}

#login-dropdown-form > h4 {
  margin-bottom: 20px;
}

#login-dropdown-form > form > input {
  margin-bottom: 10px;
}

#register {
  margin-top: 15px;
}

.alert-login {
  margin-top: 5px;
  padding: 5px;
}

.alert-login > li {
  margin-left: 15px;
}

#login-btn {
  margin-top: 5px;
}

/*
 * sidebar pages settings (for now used only in the profile page)
 */

#sidebar-content-wrapper,
#registration-content-wrapper {
  min-height: calc(100% - 192px);
  padding-top: 50px;
}

#sidebar-content-wrapper > .row {
  height: 100%;
}

#main-content > h4:first-child {
  padding-top: 0;
  margin-top: 0;
}

.list-group-item.active,
.list-group-item.active:link,
.list-group-item.active:visited,
.list-group-item.active:active,
.list-group-item.active:hover {
  background-color: $dark;
  border-color: $dark;
  border-top-color: #ddd;
  border-bottom-color: #ddd;
}

/*
 * product
 */
#product-page {
  min-height: calc(100% - 192px);
  padding: 40px 0px 40px 0px;
}

#product-thumbs-carousel {
  margin-top: 20px;
}

.thumb-control {
  padding-top: 7.5%;
  width: 5%;
}


/*
 * tweaking with panel's border style
 */
.panel {
  border: 0px;
  border-radius: 0px;
}

.panel > .panel-heading {
  border-radius: 0px;
  border: 1px solid #ddd;
  border-bottom: 0;
  background-color: white;
  display: flex;
  justify-content: space-between;
}

.panel > .panel-body {
  border: 1px solid #ddd;
  border-top: 0px;
}

/*
 * edit / remove buttons added to panel's heading.
 * we add 10px of margin top and bottom to equal those of h4, thus making both
 * aligned vertically inside the heading.
 */
.options-btn {
  margin-top: 10px;
  margin-bottom: 10px;
}

/*
 * user page stuff
 */

#profile-panel {
  border: 1px solid #ddd;
}


/*
 * institucional / newsletter & social media stuff
 */

ul#info {
  text-align: center;
  color: $grey;
  li {
    margin: 0 20px 0 20px;
    &:hover {
      color: $dark-grey;
    }
  }
}

div#connect {
  text-align: center;
  margin: 40px 0 0 0;
  width: 100%;
  height: 120px;
  span {
    height: 60px;
    @media screen and (min-width: 320px) {
      display: block;
      width: 100%;
    }
    @media screen and (min-width: 720px) {
      display: inline-block;
      width: 30%;
    }
    a {
      i {
        width: 30px;
        @include align-vertical(30px);
        border: 1px solid $dark;
        border-radius: 50%;
        &:hover {
          color: $grey;
          border-color: $grey;
        }
      }
      &:first-child {
        margin-right: 5px;
      }
      &:last-child {
        margin-left: 5px;
      }
      & {
        text-decoration: none !important;
        color: $dark;
      }
    }
  }
}

#newsletter {
  div {
    @include align-vertical(20px);
    box-sizing: border-box;
    button {
      height: 26px;
      width: 30px;
      background: $dark;
      border: 1px solid $dark;
      color: white;
    }
  }
}


/*
 * footer
 */

#footer-wrapper {
  background-color: $dark;
  color: $grey;
  border-top: 1px solid #080808;
  width: 100%;
}

footer {
  margin-top: 20px;
  height: 120px;
}

